les classes css

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</article>
 				</div>
 			</section>
-			<section>
+			<section class="sectionLinearGradientBackground whiteContentSection textCenter">
 				<h2>Les membres fondateurs</h2>
 				<div class="directionRow">
 					<article>
@@ -67,13 +67,15 @@
 					</article>
 				</div>
 			</section>
-			<section>
+			<section class="sectionLightGreyBackground">
 				<h2>Découvrez nos cours !</h2>
-				<div class="directionRow">
-					<a class="button buttonDrakGreyColor" href="documents/planning-adultes.pdf">
+				<div class="directionColumn">
+					<a class="button buttonRounded buttonMainColor buttonHighlight"
+						href="documents/planning-adultes.pdf">
 						Télécharger le planning de cours pour adultes
 					</a>
-					<a class="button buttonDrakGreyColor" href="documents/planning-enfants.pdf">
+					<a class="button buttonRounded buttonSecondColor buttonHighlight"
+						href="documents/planning-enfants.pdf">
 						Télécharger le planning de cours pour enfants
 					</a>
 				</div>
